# ThesisCode_Data

./: README.md
CodeAndData/Code/C++/OpenGLTutorials/: CMakeLists.txt  OpenGLTutorials.cbp  OpenGLTutorials.depend  OpenGLTutorials.layout  main.cpp
CodeAndData/Code/C++/OpenGLTutorials/include/: Display.h
CodeAndData/Code/C++/OpenGLTutorials/src/: Display.cpp
CodeAndData/Code/C++/OpenGL_OBJ_Viewer/: BeginProgramming.sh
CodeAndData/Code/C++/RedTriangle/: CMakeLists.txt
CodeAndData/Code/C++/RedTriangle/includes/display/: display.cpp
CodeAndData/Code/C++/RedTriangle/includes/mesh/: mesh.cpp  mesh.h
CodeAndData/Code/C++/RedTriangle/includes/shader/: shader.cpp  shader.h
CodeAndData/Code/C++/RedTriangle/main/: main.cpp
CodeAndData/Code/C++/SettingUpSDLOpenGL/: CMakeLists.txt
CodeAndData/Code/C++/SettingUpSDLOpenGL/include/display/: Display.cpp  Display.hpp
CodeAndData/Code/C++/SettingUpSDLOpenGL/src/: main.cpp
CodeAndData/Code/C++/TutorialShaders/: CMakeLists.txt
CodeAndData/Code/C++/TutorialShaders/include/display/: display.cpp  display.h
CodeAndData/Code/C++/TutorialShaders/include/shader/: camera.h  shader.cpp  transform.h
CodeAndData/Code/C++/TutorialShaders/resources/shaders/: basicShader.fs
CodeAndData/Code/C++/TutorialShaders/src/: main.cpp
CodeAndData/Code/OutlineDocument/: CodeOutlinePlan.aux  CodeOutlinePlan.fdb_latexmk  CodeOutlinePlan.fls  CodeOutlinePlan.tex
CodeAndData/Code/Python/: .~lock.temp.xlsx#  CameraMod.py  IR_Data_PreProcessing.py  IR_imageObject.py  csv_to_IR_image.py  excel2IRimg.py  temp.xlsx  test.py  test01.py  tkinter_test.py  tkinter_test01.py  xlsx_testIRmanip.py
CodeAndData/Data/ImageData/IR_Images/: .~lock.ThirtyIRFrames_60mm.xlsx#  ThirtyIRFrames_60mm.csv  ThirtyIRFrames_60mm_emissivityof1.xlsx
CodeAndData/Data/ImageData/IR_Images/ThirtyIRFrames_20mm/: IR_ImageData.csv.0  IR_ImageData.csv.1  IR_ImageData.csv.10  IR_ImageData.csv.11  IR_ImageData.csv.12  IR_ImageData.csv.13  IR_ImageData.csv.14  IR_ImageData.csv.15  IR_ImageData.csv.16  IR_ImageData.csv.17  IR_ImageData.csv.18  IR_ImageData.csv.19  IR_ImageData.csv.2  IR_ImageData.csv.20  IR_ImageData.csv.21  IR_ImageData.csv.22  IR_ImageData.csv.23  IR_ImageData.csv.24  IR_ImageData.csv.25  IR_ImageData.csv.26  IR_ImageData.csv.27  IR_ImageData.csv.28  IR_ImageData.csv.29  IR_ImageData.csv.3  IR_ImageData.csv.30  IR_ImageData.csv.4  IR_ImageData.csv.5  IR_ImageData.csv.6  IR_ImageData.csv.7  IR_ImageData.csv.8  IR_ImageData.csv.9
CodeAndData/Data/ImageData/IR_Images/ThirtyIRFrames_60mm/: IR_ImageData.csv.0  IR_ImageData.csv.1  IR_ImageData.csv.10  IR_ImageData.csv.11  IR_ImageData.csv.12  IR_ImageData.csv.13  IR_ImageData.csv.14  IR_ImageData.csv.15  IR_ImageData.csv.16  IR_ImageData.csv.17  IR_ImageData.csv.18  IR_ImageData.csv.19  IR_ImageData.csv.2  IR_ImageData.csv.20  IR_ImageData.csv.21  IR_ImageData.csv.22  IR_ImageData.csv.23  IR_ImageData.csv.24  IR_ImageData.csv.25  IR_ImageData.csv.26  IR_ImageData.csv.27  IR_ImageData.csv.28  IR_ImageData.csv.29  IR_ImageData.csv.3  IR_ImageData.csv.30  IR_ImageData.csv.4  IR_ImageData.csv.5  IR_ImageData.csv.6  IR_ImageData.csv.7  IR_ImageData.csv.8  IR_ImageData.csv.9
